# WebSpider-Server

./: CMakeLists.txt  ReadME.md  WebSpider.ini  http_server.cpp  http_server.h  main.cpp  stringstructs.h
ExceptINI/: CMakeLists.txt  Exception.cpp  Exception.h
INI_Parser/: CMakeLists.txt  INI_parser.cpp  INI_parser.h
